--- a/templates/flash.html
+++ b/templates/flash.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FLASH CARD APP</title>
+    <link rel="stylesheet" href="/website/static/static/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1;900&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="container2">
+        <div class="nav">
+          <h2>Flashcards</h2>
+          <div>
+            <button onclick="showCreateCardBox()">New Card</button>
+            <button onclick="delFlashcards()">Delete Card</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container3">
+      <div class="create-box">
+        <h2 style="text-align: center;color: black;">Create Flashcard</h2>
+        <label for="Question">Question</label>
+        <textarea id="question"></textarea>
+        
